--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,22 +1,15 @@
-<h1>Blog</h1>
+<h2>Blog</h2>
 
-<%= will_paginate @posts %>
-<ul>
-	<% @posts.each do |post|%>
-	<li>
-  		Title: <%= link_to post.title, post %> <br/>
-  		Content :<%= post.content %><br/>
-  		Category : <%= post.category %><br/>
-  		
-	</li>
-	<li>
-		<% if signed_in? %>
-  			
-  			|<%= link_to "Delete", post, :method => :delete, 
-									:confirm => "You sure?",
-                                	:title => post.title%>
-		<% end %>
-	</li>
-	<% end %>
-</ul>
+
+<% @posts.each do |post|%>
+	<article>
+  		<h3><%= link_to post.title, post %></h3>
+  		<h6><%= post.created_at %>|<a href="#">10 Comments</a>
+  		| Category: <a href="#"><%= post.category %></a></h6>
+  		<%= raw(truncate(post.content, :length => 250, :omission => (link_to "...", post))) %>
+		<br/>
+		<%= render 'settings',:object => post %>
+	</article>
+<% end %>
+
 <%= will_paginate @posts %>
