--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
-<header>
+<header class="container_24">
 	<h1><%= link_to "Project Sesame", root_path %></h1>
-  	<nav>
+  	<nav >
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
